--- a/public/windows/main/index.html
+++ b/public/windows/main/index.html
@@ -4,71 +4,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-        href="../../styles/css/materialize.min.css" media="screen,projection">
-  <link rel="stylesheet" type="text/css" href="./main.css"
-        media="screen,projection">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../styles/css/materialize.min.css" media="screen,projection">
+  <link rel="stylesheet" type="text/css" href="./main.css" media="screen,projection">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-<script>
-  // You can also require other files to run in this process
-  require('jquery')
-</script>
-<!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
-<!--<script src="../../styles/js/jquery-2.2.1.min.js"></script>-->
-<script src="../../styles/js/hammer.min.js"></script>
-<script src="../../styles/js/materialize.min.js"></script>
+  <script>
+    // You can also require other files to run in this process
+    require('jquery')
 
-<!--<a class="btn btn-floating btn-large pulse"><i class="material-icons">cloud</i></a>
+  </script>
+  <!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
+  <!--<script src="../../styles/js/jquery-2.2.1.min.js"></script>-->
+  <script src="../../styles/js/hammer.min.js"></script>
+  <script src="../../styles/js/materialize.min.js"></script>
+
+  <!--<a class="btn btn-floating btn-large pulse"><i class="material-icons">cloud</i></a>
 <a class="waves-effect waves-light btn connect-asterisk-btn pulse">Connect Asterisk</a>-->
-<div class="side-nav fixed white-text teal lighten-2"
-     style="transform: translateX(0px);">
-  <div class="authorization-form center-align">
-    <div class="modal-header row">
-      <h4>Авторизация</h4>
-    </div>
-    <div class="modal-body">
-      <div class="row center-align">
-        <div class="input-field col s12 white-text">
-          <input id="username" type="text" class="white-text validate">
-          <label for="username" class="white-text">Имя пользователя</label>
-        </div>
+  <div class="side-nav fixed white-text teal lighten-2" style="transform: translateX(0px);">
+    <div class="authorization-form center-align">
+      <div class="modal-header row">
+        <h4>Авторизация</h4>
       </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">Пароль</label>
+      <div class="modal-body">
+        <div class="row center-align">
+          <div class="input-field col s12 white-text">
+            <input id="username" type="text" class="white-text validate">
+            <label for="username" class="white-text">Имя пользователя</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="ip-address" type="text" class="validate ">
-          <label for="password">IP Адрес</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="password" type="password" class="validate">
+            <label for="password">Пароль</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col s12 center-align">
-          <button class="btn waves-effect waves-light pulse connect-server"
-                  type="submit" name="action">Подключиться
-          </button>
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="ip-address" type="text" class="validate ">
+            <label for="password">IP Адрес</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col center">
-          <div class="progress-block preloader-wrapper big active">
-            <div class="spinner-layer spinner-white-only">
-              <div class="circle-clipper left">
-                <div class="circle"></div>
-              </div>
-              <div class="gap-patch">
-                <div class="circle"></div>
-              </div>
-              <div class="circle-clipper right">
-                <div class="circle"></div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <button class="btn waves-effect waves-light pulse connect-server" type="submit" name="action">Подключиться</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col center">
+            <div class="progress-block preloader-wrapper big active">
+              <div class="spinner-layer spinner-white-only">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                  <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -76,39 +72,71 @@
       </div>
     </div>
   </div>
-</div>
-<nav>
-  <div class="nav-wrapper teal lighten-2">
-    <a href="#" class="brand-logo right">Telepasu Admin Panel</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-  </div>
-</nav>
-<div class="main-window">
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card horizontal">
-        <div class="card-image">
-          <img src="http://lorempixel.com/100/190/nature/6">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
+  <nav>
+    <div class="nav-wrapper teal lighten-2">
+      <a href="#" class="brand-logo left hide-on-med-and-down">Telepasu Admin Panel</a>
+      <ul id="nav-mobile" class="right">
+        <li><a class="btn waves-effect waves-light disconnect-server">Отключиться</a></li>
+        <li><a href="sass.html">Выход</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="main-window">
+    <h5>Добро пожаловать!</h5>
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="http://lorempixel.com/100/190/nature/6">
           </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="http://lorempixel.com/100/190/nature/6">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="http://lorempixel.com/100/190/nature/6">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--<h5>Для начала работы, пожалуйста авторизуйтесь</h5>-->
+    <!--<img src="https://s-media-cache-ak0.pinimg.com/originals/13/19/59/131959b3a1dd9e5e6489b80350f05692.gif" alt="">-->
   </div>
-  <h5>Добро пожаловать!</h5>
-  <h5>Для начала работы, пожалуйста авторизуйтесь</h5>
-  <img src="https://s-media-cache-ak0.pinimg.com/originals/13/19/59/131959b3a1dd9e5e6489b80350f05692.gif" alt="">
-</div>
 </body>
 
 <script>
