--- a/public/windows/main/index.html
+++ b/public/windows/main/index.html
@@ -14,7 +14,6 @@
   <script>
     // You can also require other files to run in this process
     require('jquery')
-
   </script>
   <!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
   <!--<script src="../../styles/js/jquery-2.2.1.min.js"></script>-->
@@ -31,18 +30,21 @@
       <div class="modal-body">
         <div class="row center-align">
           <div class="input-field col s12 white-text">
+            <i class="material-icons prefix">person_pin</i>
             <input id="username" type="text" class="white-text validate">
             <label for="username" class="white-text">Имя пользователя</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
             <input id="password" type="password" class="validate">
             <label for="password">Пароль</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
+            <i class="material-icons prefix">language</i>
             <input id="ip-address" type="text" class="validate ">
             <label for="password">IP Адрес</label>
           </div>
@@ -76,25 +78,26 @@
     <div class="nav-wrapper teal lighten-2">
       <a href="#" class="brand-logo left hide-on-med-and-down">Telepasu Admin Panel</a>
       <ul id="nav-mobile" class="right">
-        <li><a class="btn waves-effect waves-light disconnect-server">Отключиться</a></li>
+        <li><a class="btn waves-effect waves-light auth-true disconnect-server">Отключиться</a></li>
+        <li><a class="btn waves-effect waves-light auth-true connect-asterisk-btn">Подключить Asterisk</a></li>
         <li><a href="sass.html">Выход</a></li>
       </ul>
     </div>
   </nav>
   <div class="main-window">
-    <h5>Добро пожаловать!</h5>
     <div class="row">
       <div class="col s12 m12">
         <div class="card horizontal">
-          <div class="card-image">
-            <img src="http://lorempixel.com/100/190/nature/6">
+          <div class="card-image valign-wrapper">
+            <i class="material-icons medium">assessment</i>
           </div>
           <div class="card-stacked">
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <h5>Аналитика</h5>
+              <p>Просмотр отчётной статистики работы АТС и клиентских приложений</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">В разработке</a>
             </div>
           </div>
         </div>
@@ -103,15 +106,16 @@
     <div class="row">
       <div class="col s12 m12">
         <div class="card horizontal">
-          <div class="card-image">
-            <img src="http://lorempixel.com/100/190/nature/6">
+          <div class="card-image valign-wrapper">
+            <i class="material-icons medium">business</i>
           </div>
           <div class="card-stacked">
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <h5>Управление телефонией</h5>
+              <p>Полный контроль над вашей АТС, управляйте звонками и всем, что с ними связано!</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">В разработке</a>
             </div>
           </div>
         </div>
@@ -120,15 +124,16 @@
     <div class="row">
       <div class="col s12 m12">
         <div class="card horizontal">
-          <div class="card-image">
-            <img src="http://lorempixel.com/100/190/nature/6">
+          <div class="card-image valign-wrapper">
+            <i class="material-icons medium">settings</i>
           </div>
-          <div class="card-stacked">
+          <div class="card-stacked"> 
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <h5>Настройки</h5>
+              <p>Измените параметры программного комплекса под ваши предпочтения! Не отказывайте себе в этом, это бесплатно!</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">В разработке</a>
             </div>
           </div>
         </div>
