--- a/public/windows/settings/whitelist/whitelist.html
+++ b/public/windows/settings/whitelist/whitelist.html
@@ -32,14 +32,14 @@
 
     </ul>
     <ul class="left hide-on-med-and-down">
-      <li><a href="../index.html">Главная</a></li>
+      <li><a href="index.html">Главная</a></li>
       <li><a href="badges.html">Components</a></li>
       <li><a href="collapsible.html">Javascript</a></li>
       <li><a href="mobile.html">Mobile</a></li>
     </ul>
     <ul class="side-nav blue-grey darken-3" id="mobile-demo">
       <li><h4 class="mobile-nav-header">Telepasu Admin Panel</h4></li>
-      <li><a class="white-text" href="../index.html">Главная</a></li>
+      <li><a class="white-text" href="index.html">Главная</a></li>
       <li><a class="white-text" href="badges.html">Components</a></li>
       <li><a class="white-text" href="collapsible.html">Javascript</a></li>
       <li><a class="white-text" href="mobile.html">Mobile</a></li>
