--- a/public/windows/users/users.html
+++ b/public/windows/users/users.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
   <link rel="stylesheet" type="text/css"
         href="../../styles/css/materialize.min.css" media="screen,projection">
-  <link rel="stylesheet" type="text/css" href="./main2.css"
+  <link rel="stylesheet" type="text/css" href="../main/main2.css"
         media="screen,projection">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
