--- a/public/windows/index.html
+++ b/public/windows/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hello World!</title>
+  <title>Telepasu Admin Panel - Авторизация</title>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" type="text/css"
@@ -11,9 +11,36 @@
   <link rel="stylesheet" type="text/css" href="master.css"
         media="screen,projection">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!--<script type="text/javascript"-->
+          <!--src="https://www.gstatic.com/charts/loader.js"></script>-->
+  <!--<script type="text/javascript">-->
+    <!--google.charts.load('current', {'packages': ['bar']});-->
+    <!--google.charts.setOnLoadCallback(drawChart);-->
+
+    <!--function drawChart() {-->
+      <!--var data = google.visualization.arrayToDataTable([-->
+        <!--['Year', 'Sales', 'Expenses', 'Profit'],-->
+        <!--['2014', 1000, 400, 200],-->
+        <!--['2015', 1170, 460, 250],-->
+        <!--['2016', 660, 1120, 300],-->
+        <!--['2017', 1030, 540, 350]-->
+      <!--]);-->
+
+      <!--var options = {-->
+        <!--chart: {-->
+          <!--title: 'Company Performance',-->
+          <!--subtitle: 'Sales, Expenses, and Profit: 2014-2017',-->
+        <!--}-->
+      <!--};-->
+
+      <!--var chart = new google.charts.Bar(document.getElementById('myPieChart'));-->
+
+      <!--chart.draw(data, google.charts.Bar.convertOptions(options));-->
+    <!--}-->
+  <!--</script>-->
 </head>
 
-<body>
+<body style="position: relative">
 <script>
   // You can also require other files to run in this process
   require('jquery')
@@ -23,7 +50,7 @@
 
 <!--<a class="btn btn-floating btn-large pulse"><i class="material-icons">cloud</i></a>
 <a class="waves-effect waves-light btn connect-asterisk-btn pulse">Connect Asterisk</a>-->
-<div class="side-nav fixed white-text blue-grey darken-3"
+<div class="side-nav login fixed white-text blue-grey darken-3"
      style="transform: translateX(0px);">
   <div class="authorization-form center-align">
     <div class="modal-header">
@@ -78,82 +105,104 @@
     </div>
   </div>
 </div>
+<ul class="side-nav blue-grey darken-3" id="mobile-demo">
+  <li><h4 class="mobile-nav-header">Telepasu Admin Panel</h4></li>
+  <li><a class="white-text" href="./index.html">Главная</a></li>
+  <li><a class="white-text" href="./settings/settings.html">Настройки</a></li>
+  <li><a class="white-text" href="#">Мониторинг</a></li>
+</ul>
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper blue-grey darken-3">
-      <a href="#" class="brand-logo left">Telepasu Admin
+      <a href="#" data-activates="mobile-demo"
+         class="button-collapse dashboard"><i
+          class="material-icons">menu</i></a>
+      <a href="#" class="brand-logo login center">Telepasu Admin
         Panel</a>
-      <ul id="nav-mobile" class="right">
-        <li><a class="btn waves-effect waves-light auth-true disconnect-server">Отключиться</a>
+      <a href="#" class="brand-logo dashboard center" style="display: none">Dashboard</a>
+      <ul id="nav-mobile" class="dashboard right">
+        <li><a class="waves-effect disconnect-server waves-light btn"><i
+            class="material-icons right">power_settings_new</i>выход</a></li>
+      </ul>
+      <ul class="left hide-on-med-and-down">
+        <li><a class="white-text" href="./index.html">Главная</a></li>
+        <li><a class="white-text" href="./settings/settings.html">Настройки</a>
         </li>
-        <li><a
-            class="btn waves-effect waves-light auth-true connect-asterisk-btn">Подключить
-          Asterisk</a></li>
-        <li><a href="sass.html">Выход</a></li>
+        <li><a class="white-text" href="#">Мониторинг</a></li>
       </ul>
     </div>
   </nav>
 </div>
-<div class="main-window">
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card horizontal">
-        <div class="card-image valign-wrapper">
-          <i class="material-icons medium">assessment</i>
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <h5>Аналитика</h5>
-            <p>Просмотр отчётной статистики работы АТС и клиентских
-              приложений</p>
-          </div>
-          <div class="card-action">
-            <a href="#">В разработке</a>
-          </div>
-        </div>
+<div class="dashboard page-navbar">
+  <h5>Dashboard - Главная</h5>
+  <i class="material-icons">home</i>
+  <div class="bread">
+    <a href="#" class="breadcrumb">Главная</a>
+  </div>
+</div>
+<div class="main-window login">
+  <div class="card horizontal">
+    <div class="card-image valign-wrapper">
+      <i class="material-icons medium">assessment</i>
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <h5>Аналитика</h5>
+        <p>Просмотр отчётной статистики работы АТС и клиентских
+          приложений</p>
+      </div>
+      <div class="card-action">
+        <a href="#">В разработке</a>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card horizontal">
-        <div class="card-image valign-wrapper">
-          <i class="material-icons medium">business</i>
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <h5>Управление телефонией</h5>
-            <p>Полный контроль над вашей АТС, управляйте звонками и всем, что с
-              ними связано!</p>
-          </div>
-          <div class="card-action">
-            <a href="#">В разработке</a>
-          </div>
-        </div>
+  <div class="card horizontal">
+    <div class="card-image valign-wrapper">
+      <i class="material-icons medium">business</i>
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <h5>Управление телефонией</h5>
+        <p>Полный контроль над вашей АТС, управляйте звонками и всем, что с
+          ними связано!</p>
+      </div>
+      <div class="card-action">
+        <a href="#">В разработке</a>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card horizontal">
-        <div class="card-image valign-wrapper">
-          <i class="material-icons medium">settings</i>
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <h5>Настройки</h5>
-            <p>Измените параметры программного комплекса под ваши предпочтения!
-              Не отказывайте себе в этом, это бесплатно!</p>
-          </div>
-          <div class="card-action">
-            <a href="#">В разработке</a>
-          </div>
-        </div>
+  <div class="card horizontal">
+    <div class="card-image valign-wrapper">
+      <i class="material-icons medium">settings</i>
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <h5>Настройки</h5>
+        <p>Измените параметры программного комплекса под ваши предпочтения!
+          Не отказывайте себе в этом, это бесплатно!</p>
+      </div>
+      <div class="card-action">
+        <a href="#">В разработке</a>
       </div>
     </div>
   </div>
-  <!--<h5>Для начала работы, пожалуйста авторизуйтесь</h5>-->
-  <!--<img src="https://s-media-cache-ak0.pinimg.com/originals/13/19/59/131959b3a1dd9e5e6489b80350f05692.gif" alt="">-->
+</div>
+<div class="dashboard analytics-main">
+  <div class="card horizontal">
+    <div class="card-image valign-wrapper">
+      <i class="material-icons medium">assessment</i>
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <h5>Аналитика</h5>
+        <p>Просмотр отчётной статистики работы АТС и клиентских
+          приложений</p>
+      </div>
+      <div class="card-action">
+        <a href="#">В разработке</a>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 
