--- a/public/windows/main/whitelist.html
+++ b/public/windows/main/whitelist.html
@@ -29,19 +29,18 @@
     <ul id="nav-mobile" class="right">
       <li><a class="waves-effect waves-light btn"><i
           class="material-icons right">power_settings_new</i>выход</a></li>
-
     </ul>
     <ul class="left hide-on-med-and-down">
       <li><a href="../index.html">Главная</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
+      <li><a href="../modules/modules.html">Модули</a></li>
+      <li><a href="../users/users.html">Пользователи</a></li>
       <li><a href="mobile.html">Mobile</a></li>
     </ul>
     <ul class="side-nav blue-grey darken-3" id="mobile-demo">
       <li><h4 class="mobile-nav-header">Telepasu Admin Panel</h4></li>
       <li><a class="white-text" href="../index.html">Главная</a></li>
-      <li><a class="white-text" href="badges.html">Components</a></li>
-      <li><a class="white-text" href="collapsible.html">Javascript</a></li>
+      <li><a class="white-text" href="../modules/modules.html">Модули</a></li>
+      <li><a class="white-text" href="../users/users.html">Пользователи</a></li>
       <li><a class="white-text" href="mobile.html">Mobile</a></li>
     </ul>
   </div>
