--- a/public/windows/settings/settings.html
+++ b/public/windows/settings/settings.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <title>Settings</title>
+  <title>Telepasu Admin Panel - "Белый" список адресов</title>
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+        href="../../styles/css/materialize.min.css" media="screen,projection">
+  <link rel="stylesheet" type="text/css" href="../shared/modules.css"
+        media="screen,projection">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body>
 
+<body>
+<script>
+  require('jquery')
+</script>
+<script src="../../styles/js/hammer.min.js"></script>
+<script src="../../styles/js/materialize.min.js"></script>
+
+<ul class="side-nav blue-grey darken-3" id="mobile-demo">
+  <li><h4 class="white-text mobile-nav-header">Telepasu Admin Panel</h4></li>
+  <li><a class="white-text" href="../index.html">Главная</a></li>
+  <li><a class="white-text" href="./settings.html">Настройки</a></li>
+  <li><a class="white-text" href="../users/users.html">Аналитика</a></li>
+  <li><a class="white-text" href="../monitoring/index.html">Мониторинг</a></li>
+</ul>
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper blue-grey darken-3">
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i
+          class="material-icons">menu</i></a>
+      <a href="#" class="brand-logo center">Настройки</a>
+      <ul id="nav-mobile" class="right">
+        <li><a class="waves-effect waves-light btn"><i
+            class="material-icons right">power_settings_new</i>выход</a></li>
+      </ul>
+      <ul class="left hide-on-med-and-down">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="./settings.html">Настройки</a></li>
+        <li><a href="../users/users.html">Аналитика</a></li>
+        <li><a href="../monitoring/index.html">Мониторинг</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+<div class="page-navbar">
+  <h5>Настройки программного комплекса</h5>
+  <i class="material-icons">home</i>
+  <div class="bread">
+    <a href="../index.html" class="breadcrumb">Главная</a>
+    <a href="#" class="breadcrumb">Настройки</a>
+  </div>
+</div>
+<div class="main-window">
+  <div class="add-ip card-panel blue-grey darken-3 z-depth-1">
+    <div  class="white-text card-header flow-text">
+      Настройки сервера
+    </div>
+    <div class="collection with-header">
+      <div class="collection-header">Общие настройки</div>
+      <a href="#" class="collection-item">Настройки proxy</a>
+      <a href="../modules/modules.html" class="collection-item">Управление модулями</a>
+      <a href="../users/users.html" class="collection-item">Управление пользователями</a>
+      <a href="./whitelist/whitelist.html" class="collection-item">"Белый" список адресов</a>
+    </div>
+  </div>
+  <div class="add-ip card-panel blue-grey darken-3 z-depth-1">
+    <div  class="white-text card-header flow-text">
+      Настройки модуля аналитики
+    </div>
+    <div class="collection with-header disabled">
+      <div class="collection-header">Общие настройки</div>
+      <a href="#" class="collection-item">Настройки</a>
+    </div>
+  </div>
+</div>
 </body>
+
+<script>
+  require('./whitelist.js')
+</script>
+<script src="./settings.js" type="text/javascript"></script>
 </html>
