--- a/public/windows/users/users.html
+++ b/public/windows/users/users.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
   <link rel="stylesheet" type="text/css"
         href="../../styles/css/materialize.min.css" media="screen,projection">
-  <link rel="stylesheet" type="text/css" href="../main/main2.css"
+  <link rel="stylesheet" type="text/css" href="../shared/modules.css"
         media="screen,projection">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -20,40 +20,67 @@
 <script src="../../styles/js/hammer.min.js"></script>
 <script src="../../styles/js/materialize.min.js"></script>
 
-<nav>
-  <div class="nav-wrapper teal lighten-2">
-    <ul id="nav" class="left">
-      <li>
-        <div class="left"><a class="waves-effect waves-light btn"><i
-            class="material-icons left">chevron_left</i>назад</a></div>
-      </li>
-    </ul>
+<ul class="side-nav blue-grey darken-3" id="mobile-demo">
+  <li><h4 class="white-text mobile-nav-header">Telepasu Admin Panel</h4></li>
+  <li><a class="white-text" href="../index.html">Главная</a></li>
+  <li><a class="white-text" href="./settings.html">Настройки</a></li>
+  <li><a class="white-text" href="../users/users.html">Аналитика</a></li>
+  <li><a class="white-text" href="../monitoring/index.html">Мониторинг</a></li>
+</ul>
 
-    <a href="#" class="brand-logo center">Пользователи</a>
-    <ul id="nav-mobile" class="right">
-      <li><a class="waves-effect waves-light btn"><i
-          class="material-icons right">power_settings_new</i>выход</a></li>
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper blue-grey darken-3">
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i
+          class="material-icons">menu</i></a>
+      <a href="#" class="brand-logo center">Пользователи</a>
+      <ul id="nav-mobile" class="right">
+        <li><a class="waves-effect waves-light btn"><i
+            class="material-icons right">power_settings_new</i>выход</a></li>
 
-    </ul>
+      </ul>
+      <ul class="left hide-on-med-and-down">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../settings/settings.html">Настройки</a></li>
+        <li><a href="./users.html">Аналитика</a></li>
+        <li><a href="../monitoring/index.html">Мониторинг</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
+<div class="page-navbar">
+  <h5>Управление пользователями сервера</h5>
+  <i class="material-icons">home</i>
+  <div class="bread">
+    <a href="../index.html" class="breadcrumb">Главная</a>
+    <a href="../settings/settings.html" class="breadcrumb">Настройки</a>
+    <a href="#" class="breadcrumb">Пользователи</a>
   </div>
-</nav>
+</div>
+
 <div class="main-window">
-  <div class="row">
-    <div class="col s12"></div>
-    <h5>Управление пользователями сервера</h5>
-  </div>
-  <div class="row">
-    <div class="input-field col s6">
-      <i class="material-icons prefix">search</i>
-      <input id="icon_prefix" type="text" class="validate">
-      <label for="icon_prefix">Поиск</label>
+  <div class="add-ip card-panel grey lighten-5 z-depth-1">
+    <div class="card-header">
+      Добавление адреса
     </div>
-    <div class="input-field col s6">
-      <a class="waves-effect waves-light btn right">Добавить пользователя <i class="material-icons right">add</i></a>
+    <div class="row">
+      <div class="input-field col s6">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Поиск</label>
+      </div>
+      <div class="input-field col s6">
+        <a class="waves-effect waves-light btn right">Добавить пользователя <i
+            class="material-icons right">add</i></a>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <table class="col s12 bordered highlight">
+  <div class="card-panel grey lighten-5 z-depth-1">
+    <div class="card-header">
+      Список пользователей программного комплекса
+    </div>
+    <table class="bordered highlight">
       <thead>
       <tr>
         <th>Логин</th>
@@ -74,11 +101,12 @@
         <td>Администратор</td>
         <td>
           <!--<ul id="dropdown2" class="dropdown-content">-->
-            <!--<li><a href="#!">one<span class="badge">1</span></a></li>-->
-            <!--<li><a href="#!">two<span class="new badge">1</span></a></li>-->
-            <!--<li><a href="#!">three</a></li>-->
+          <!--<li><a href="#!">one<span class="badge">1</span></a></li>-->
+          <!--<li><a href="#!">two<span class="new badge">1</span></a></li>-->
+          <!--<li><a href="#!">three</a></li>-->
           <!--</ul>-->
-          <a class="btn-flat btn-small dropdown-button" href="#!" data-activates="dropdown2"><i class="material-icons">edit</i></a>
+          <a class="btn-flat btn-small dropdown-button" href="#!"
+             data-activates="dropdown2"><i class="material-icons">edit</i></a>
         </td>
       </tr>
       <tr>
@@ -87,7 +115,9 @@
         <td>101</td>
         <td>lupachev@competentum.ru</td>
         <td>Администратор</td>
-        <td><a class="btn-flat btn-small dropdown-button" href="#!" data-activates="dropdown2"><i class="material-icons">edit</i></a></td>
+        <td><a class="btn-flat btn-small dropdown-button" href="#!"
+               data-activates="dropdown2"><i class="material-icons">edit</i></a>
+        </td>
       </tr>
       <tr class="add-user">
         <td>Mark</td>
@@ -95,7 +125,9 @@
         <td>+1234567890</td>
         <td>test@competentum.ru</td>
         <td>Пользователь</td>
-        <td><a class="btn-flat btn-small dropdown-button" href="#!" data-activates="dropdown2"><i class="material-icons">edit</i></a></td>
+        <td><a class="btn-flat btn-small dropdown-button" href="#!"
+               data-activates="dropdown2"><i class="material-icons">edit</i></a>
+        </td>
       </tr>
       </tbody>
     </table>
