--- a/public/windows/settings/settings.html
+++ b/public/windows/settings/settings.html
@@ -80,7 +80,7 @@
 </body>
 
 <script>
-  require('./whitelist.js')
+  require('./settings.js')
 </script>
 <script src="./settings.js" type="text/javascript"></script>
 </html>
