--- a/public/windows/settings/whitelist/whitelist.html
+++ b/public/windows/settings/whitelist/whitelist.html
@@ -7,52 +7,54 @@
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" type="text/css"
-        href="../../styles/css/materialize.min.css" media="screen,projection">
+        href="../../../styles/css/materialize.min.css" media="screen,projection">
   <link rel="stylesheet" type="text/css" href="./whitelist.css"
         media="screen,projection">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="../../styles/js/less.min.js" type="text/javascript"></script>
+  <script src="../../../styles/js/less.min.js" type="text/javascript"></script>
 </head>
 
 <body>
 <script>
   require('jquery')
 </script>
-<script src="../../styles/js/hammer.min.js"></script>
-<script src="../../styles/js/materialize.min.js"></script>
+<script src="../../../styles/js/hammer.min.js"></script>
+<script src="../../../styles/js/materialize.min.js"></script>
 
-<nav>
-  <div class="nav-wrapper blue-grey darken-3">
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i
-        class="material-icons">menu</i></a>
-    <a href="#" class="brand-logo center">"Белый" список</a>
-    <ul id="nav-mobile" class="right">
-      <li><a class="waves-effect waves-light btn"><i
-          class="material-icons right">power_settings_new</i>выход</a></li>
+<ul class="side-nav blue-grey darken-3" id="mobile-demo">
+  <li><h4 class="white-text mobile-nav-header">Telepasu Admin Panel</h4></li>
+  <li><a class="white-text" href="../../index.html">Главная</a></li>
+  <li><a class="white-text" href="../settings.html">Настройки</a></li>
+  <li><a class="white-text" href="../../modules/modules.html">Аналитика</a></li>
+  <li><a class="white-text" href="../monitoring/index.html">Мониторинг</a></li>
+</ul>
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper blue-grey darken-3">
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i
+          class="material-icons">menu</i></a>
+      <a href="#" class="brand-logo center">"Белый" список</a>
+      <ul id="nav-mobile" class="right">
+        <li><a class="waves-effect waves-light btn"><i
+            class="material-icons right">power_settings_new</i>выход</a></li>
 
-    </ul>
-    <ul class="left hide-on-med-and-down">
-      <li><a href="../index.html">Главная</a></li>
-      <li><a href="../modules/modules.html">Модули</a></li>
-      <li><a href="../users/users.html">Пользователи</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
-    <ul class="side-nav blue-grey darken-3" id="mobile-demo">
-      <li><h4 class="mobile-nav-header">Telepasu Admin Panel</h4></li>
-      <li><a class="white-text" href="../index.html">Главная</a></li>
-      <li><a class="white-text" href="../modules/modules.html">Модули</a></li>
-      <li><a class="white-text" href="../users/users.html">Пользователи</a></li>
-      <li><a class="white-text" href="mobile.html">Mobile</a></li>
-    </ul>
-  </div>
-</nav>
+      </ul>
+      <ul class="left hide-on-med-and-down">
+        <li><a class="white-text" href="../../index.html">Главная</a></li>
+        <li><a class="white-text" href="../settings.html">Настройки</a></li>
+        <li><a class="white-text" href="../../modules/modules.html">Аналитика</a></li>
+        <li><a class="white-text" href="../monitoring/index.html">Мониторинг</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
 <div class="page-navbar">
   <h5>"Белый" список адресов</h5>
   <i class="material-icons">home</i>
   <div class="bread">
-    <a href="#!" class="breadcrumb">Главная</a>
-    <a href="#!" class="breadcrumb">Настройки</a>
-    <a href="#!" class="breadcrumb">"Белый" список</a>
+    <a href="../../index.html" class="breadcrumb">Главная</a>
+    <a href="../settings.html" class="breadcrumb">Настройки</a>
+    <a href="#" class="breadcrumb">"Белый" список</a>
   </div>
 </div>
 <div class="main-window">
@@ -62,15 +64,15 @@
     </div>
     <div class="row">
       <div class="input-field col s7">
-        <input id="icon_prefix" type="text" class="validate">
+        <input id="icon_prefix" type="text" class="ip-address">
         <label for="icon_prefix">IP Address</label>
       </div>
       <div class="input-field col s2">
-        <input id="icon_telephone" type="tel" class="validate">
+        <input id="icon_telephone" type="tel" class="allowed-port">
         <label for="icon_telephone">Port</label>
       </div>
       <div class="input-field col s3">
-        <a class="btn btn-small dropdown-button right" href="#!"
+        <a class="btn btn-small dropdown-button right add-ip-button" href="#!"
            data-activates="dropdown2">Добавить</a>
       </div>
     </div>
@@ -88,13 +90,9 @@
       </tr>
       </thead>
 
-      <tbody>
+      <tbody class="ip-table">
       <tr>
-        <td>localhost</td>
-        <td>any</td>
-        <td><a class="btn-flat btn-small dropdown-button" href="#!"
-               data-activates="dropdown2"><i
-            class="material-icons">edit</i></a></td>
+
       </tr>
       </tbody>
     </table>
